# common3d

./: .gitignore  CMakeLists.txt
include/: cube.h  math3d.h  neighborhood_map.h  point_in_block.h  vector.h
src/: CMakeLists.txt  cube.cc  main.cc  math3d.cc  neighborhood_map.cc  vector.cc
